# sriov-netplan-shim

./: .stestr.conf  README.md  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: tests.yaml
etc/: interfaces.yaml
sriov_netplan_shim/: cmd.py  pci.py
sriov_netplan_shim/tests/unit/: pci_responses.py  test_pci.py  test_pci_helper.py  test_utils.py
tools/: sriov-netplan-shim.service
