[metadata]
name =  sriov-netplan-shim
summary = Utility to configure SR-IOV VF's (until netplan can do it)
description-file =
    README.md
long_description_content_type = text/markdown
author = OpenStack Charmers Team
author-email = james.page@ubuntu.com
home-page = http://github.com/openstack-charmers/sriov-netplan-shim
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    sriov_netplan_shim
data_files =
    lib/systemd/system =
    tools/sriov-netplan-shim.service
    etc/sriov-netplan-shim =
    etc/interfaces.yaml

[entry_points]
console_scripts =
    sriov-netplan-shim = sriov_netplan_shim.cmd:main
